# behavior-cloning

./: .gitignore  README.md  dt_trainer.py  evaluate.ipynb  main.py  pyproject.toml  requirements.txt  train_cfg.yml  utils.py
config/: train_cfg.yml
expert_data/: all_date.npy
notebooks/: check_traj.ipynb  clean.ipynb  evaluate.ipynb
script/: exec.sh
src/: create_dataset.py  dt_trainer.py  edt_trainer.py  env.py  main.py  main_edt.py  prepare_dataset.py  trainer.py
src/base/: base_dt.py  base_trainer.py
src/dataset/: create_dataset.py  prepare_dataset.py
src/env/: trade_env.py
src/model/: __init__.py  discrete_model.py  dt_model.py  edt_model.py  model.py  rl_model.py
src/trade_env/: trade_env.py
src/utils/: edt_utils.py  return_search.py  utils.py
trade_log/synthetic_all_rsi/: RSI (14)_-0.01_0.05.pkl  RSI (14)_-0.02_0.1.pkl  RSI (14)_-0.05_0.05.pkl  RSI (14)_-0.05_0.1.pkl  RSI (14)_-0.1_0.15.pkl  RSI (14)_-0.99_0.99.pkl  RSI (3)_-0.01_0.05.pkl  RSI (3)_-0.02_0.1.pkl  RSI (3)_-0.05_0.05.pkl  RSI (3)_-0.05_0.1.pkl  RSI (3)_-0.99_0.99.pkl  RSI (5)_-0.01_0.02.pkl  RSI (5)_-0.01_0.05.pkl  RSI (5)_-0.02_0.1.pkl  RSI (5)_-0.05_0.1.pkl  RSI (5)_-0.1_0.15.pkl  RSI (5)_-0.99_0.99.pkl
